Fixes menu layout on iOS

--- a/src/global.scss
+++ b/src/global.scss
@@ -46,3 +46,7 @@ ion-col {
 .map_canvas {
   height: 50vh;
 }
+
+.ios #home-list {
+  padding-top: 32px;
+}
